--- a/presente.html
+++ b/presente.html
@@ -18,7 +18,7 @@
     <div id="cafe">
 
     <a href="resgatado.html">
-        <p>Café da manhã gourmet</p>
+        <p>Sorvete de Avelã</p>
     </a>
 
     </div>
@@ -27,7 +27,7 @@
     <div id="fast">
 
         <a href="resgatado.html">
-            <p>Fast food favorito</p>
+            <p>Amor e carinho</p>
         </a>
     
     </div>
@@ -36,7 +36,7 @@
     <div id="cine">
 
         <a href="resgatado.html">
-            <p>Cineminha</p>
+            <p>Filminho com pipoca</p>
         </a>
     
         </div>
